--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/leaflet/dist/leaflet.css",
               "src/styles.css"              
             ],
             "scripts": [
