--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@asymmetrik/ngx-leaflet": "^7.0.0",
+    "@fortawesome/angular-fontawesome": "^0.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "bootstrap": "^4.4.1",
     "jquery": "^3.5.1",
     "jsonfile": "^6.0.1",
+    "leaflet": "^1.5.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -33,6 +38,7 @@
     "@angular/language-service": "~8.1.2",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/leaflet": "^1.5.12",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "concurrently": "^5.2.0",
